--- a/time_series_forecasting_with_LSTM.ipynb
+++ b/time_series_forecasting_with_LSTM.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPqdU0s7mVpuBGrxwiRYjHj",
+      "authorship_tag": "ABX9TyP4oL1qL0KXhQYPKewtopST",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
         "import matplotlib.pyplot as plt\n",
         "from statsmodels.tsa.arima_process import ArmaProcess\n",
         "\n",
-        "# simpulate time series data\n",
+        "# simulate time series data\n",
         "np.random.seed(0)\n",
         "n_points = 1000\n",
         "ar_params = np.array([1, -0.9])\n",
